--- a/Exercise/Base.lproj/Main.storyboard
+++ b/Exercise/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IeR-W5-sUP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E7f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IeR-W5-sUP">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6246"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -24,7 +24,7 @@
         <!--Settings-->
         <scene sceneID="TKA-It-39k">
             <objects>
-                <viewController id="sEb-hc-Se2" customClass="SettingsViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingsViewController" id="sEb-hc-Se2" customClass="SettingsViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="oGz-WI-HZw"/>
                         <viewControllerLayoutGuide type="bottom" id="qow-xv-Fb7"/>
@@ -249,7 +249,7 @@
         <!--Danger View Controller-->
         <scene sceneID="dA0-rL-Vh1">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="h0H-ar-jvV" customClass="DangerViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DangerViewController" automaticallyAdjustsScrollViewInsets="NO" id="h0H-ar-jvV" customClass="DangerViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="XyH-FW-ax9"/>
                         <viewControllerLayoutGuide type="bottom" id="jCy-dJ-r7k"/>
